feat/Improve visuals

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <h1>FLEX</h1>
-    <h3>PLAYGROUND</h3>
+    <h2>PLAYGROUND</h2>
     <div id="main-row" class="row">
         <div class="col">
-            <h3>Code</h3>
+            <h3>CODE</h3>
             <ul id="code-container">
                 <li><div class="marker"></div><span class="selector">#playground-container</span><span class="white">{</span></li>
                 <li><div class="marker"></div><span class="property">display</span><span class="white">: </span><span class="property-value">flex</span><span class="white">;</span></li>
@@ -234,9 +234,9 @@
             </ul>
         </div>  
         <div class="col">
-            <h3>Playground</h3>
+            <h3>PREVIEW</h3>
             <div class="row">
-                <input id="playground-height-slider" type="range" min="1" max="100" value="100" >
+                <input id="playground-height-slider" type="range" min="1" max="100" value="100" orient="vertical">
                 <div id="playground-outer-container">
                     <div id="playground-container">
                         <div id="r-square" class="square"></div>
@@ -248,6 +248,7 @@
             <input id="playground-width-slider" type="range" min="1" max="100" value="100">
         </div>
     </div>
+    <footer>&copy;2022 Made by <a href="https://progawski.eu/">progawski</a></footer>
     <script src="script.js"></script>
 </body>
 </html>
