fix/Correct html file after w3 validation

--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
                         <span class="white">;</span>
                     </li>
                     <li><div class="marker"></div><span class="property">flex-basis</span><span class="white">: </span>
-                        <input type="text" id="g-flex-basis" class="square-flex-basis" value="150" disabled>
-                        <select id="g-flex-basis-unit" class="square-flex-basis-unit">
+                        <input type="text" id="b-flex-basis" class="square-flex-basis" value="150" disabled>
+                        <select id="b-flex-basis-unit" class="square-flex-basis-unit">
                             <option value="px">px</option>
                             <option value="%">%</option>
                             <option value="auto" selected>auto</option>
@@ -252,7 +252,7 @@
         <div class="col">
             <h3>PREVIEW</h3>
             <div class="row">
-                <input id="playground-height-slider" type="range" min="1" max="100" value="100" orient="vertical">
+                <input id="playground-height-slider" type="range" min="1" max="100" value="100">
                 <div id="playground-outer-container">
                     <div id="playground-container">
                         <div id="r-square" class="square"></div>
